trying t fix the videos being too large

--- a/css/main.scss
+++ b/css/main.scss
@@ -639,6 +639,100 @@ ul.buttons {
 }
 }
   
+@media (width >= 50px) {
+
+  .navigation-footer{
+  background-color: #6072ff;;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  list-style: none;
+  margin: 0;
+ 
+  width: 100%;
+  position: sticky;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 100px;
+    z-index: 100;
+    text-align: left;
+
+  li{
+
+    a{
+      background-color: #6072ff;
+      color: rgb(255, 255, 255);
+      display: block;
+      padding: 10px;
+      text-align:center;
+      
+      &:hover,
+      &:focus {
+        background-color: rgb(15, 30, 128);
+        color: white;
+      }
+    }
+  }
+}
+
+ul.navigation {
+  background-color: #6072ff;;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+
+  li{
+
+    a{
+      background-color: #6072ff;
+      color: rgb(255, 255, 255);
+      display: block;
+      padding: 10px;
+      text-align:center;
+      
+      &:hover,
+      &:focus {
+        background-color: rgb(15, 30, 128);
+        color: white;
+      }
+    }
+  }
+}
+}
+.video-container {
+  display: block;
+  position:relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  border-radius: 1px;
+  border:2px solid #8faefb;
+  box-shadow: 10 10px 10px rgba(90, 104, 214, 0.6);
+}
+.video-container video {
+    width: 100vw;
+    height: 100vh;
+    transition: all 0.5s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (width >= 1000px) {
 
